@@ -5,7 +5,7 @@ svn co []
 aclocal -I m4
 autoconf
 autoheader
-automake -a
+automake -a -c
 ./configure --prefix=${DIFXROOT}  CXX=${MPICXX}
 make
 # (su root?)
